--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
 
     <main>
       <section class="card" id="html-section">
         <h2>HTML</h2>
-
-     <ul>
-       <li>The head element contains information about the webpage.</li>
-       <li>The body element represents the visible content shown to the user.</li>
-     </ul>
+       <ul>
+        <li>The head element contains information about the webpage.</li>
+        <li>The body element represents the visible content shown to the user.</li>
+        <li>HTML stands for hypertext markup language.</li>
+        <li>HTML is used to create the structure, or frame, of a webpage.</li>
+      </ul>
 
       </section>
    
@@ -29,6 +31,8 @@
         <ul>
           <li>A margin indicates how much space we want around the outside of an element.</li>
           <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>CSS stands for cascading style sheets.</li>
+          <li>CSS defines the colors, aesthetics, visual layout, and organization.</li>
         </ul>
    
       </section>
@@ -36,15 +40,24 @@
       <section class="card" id="git-section">
         <h2>Git</h2>
         <ul> 
-        <li>git status: checks what branch we are currently on</li>
-        <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-   
+          <li>git status: checks what branch we are currently on.</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it.</li>
+          <li>git add -A: to commit files to working branch.</li>
+          <li>git pull origin main: to pull base branch to feature branch.</li>
+        </ul>
+
       </section>
    
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>JavaScript (JS) is a high-level dynamic programming language that allows users to interact with websites.</li>
+          <li>Variable: a named container that allows us to store data in our code.</li>
+          <li>Control flow: order in which a computer executes code in a script.</li>
+          <li>Array: a single variable that is used to hold a group of data.</li>
+          <li>Function: a set of instructions that tells the computer how to perform a certain task.</li>
         </ul>
    
       </section>
@@ -54,5 +67,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
